--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ span b {
 }
 .artist-text {
 line-height: 1;
-text-transform: uppercase;
+text-transform: lowercase;
 font-family: hfm_main;
 font-size: 165%;
 color: rgb(255 255 255);
@@ -56,7 +56,7 @@ text-align: center;
 }
 .title-text {
 line-height: 1;
-text-transform: uppercase;
+text-transform: lowercase;
 font-family: hfm_main;
 font-size: 165%;
 color: rgb(255 255 255);
