--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     width: 600px;
     margin: auto;
     display: table;
-    background: linear-gradient(to right, #000, #1e1e1e);
+    background: linear-gradient(to right, #000, #171717);
 	border-radius: 15px;
 }
 .banner-box {
